relational_types_procmacro_tests/tests/03-non-supported-argument.stderr
error: proc-macro derive panicked
 --> $DIR/03-non-supported-argument.rs:7:10
  |
7 | #[derive(GetCorresponding)]
  |          ^^^^^^^^^^^^^^^^
  |
  = help: message: Only `key = "value"` attributes supported.
